<resources>
    <string name="app_name">Delivery</string>
    <string name="hint_input_email_login">Tu correo</string>
    <string name="text_nombre_empresa_login">Partner Tech</string>
    <string name="text_iniciar_sesion_login">Iniciar Sesión</string>
    <string name="text_saludo_login">Hola!, un gusto verte de nuevo</string>
    <string name="text_email_login">Email</string>
    <string name="text_password_login">Password</string>
    <string name="switch_recordar_login">Recordar</string>
    <string name="button_ingresar_login">Ingresar</string>
    <string name="text_olvidaste_constraseña_login">Olvidaste tu contraseña?</string>
    <string name="text_registrar_login">Registrate</string>
    <string name="hint_input_contrasena_login">Tu contraseña</string>
    <string name="text_registrate_registrar">Registrate</string>
    <string name="text_conf_contrasena_registrar">Confirm password</string>
    <string name="checkbox_confirmar_registrar">Acepto los terminos del Servicio y las Políticas de Privacidad</string>
    <string name="button_continuar_registrar">Continuar</string>
    <string name="text_pregunta_registrar">¿Tienes una cuenta?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Que tal?</string>
    <string name="text_agregar_prod_tu_orden">+ Añadir otro producto</string>
    <string name="text_costo_dlv_tu_orden">Costo del delivery</string>
    <string name="text_total_tu_orden">Total</string>
    <string name="text_agregar_nota_tu_orden">+ Añadir notas</string>
    <string name="button_aceptar_tu_orden">Aceptar</string>
    <string name="text_direccion_dlv_checkout">Direccion de Delivery</string>
    <string name="text_cambiar_direccion_checkout">Cambiar</string>
    <string name="text_metodo_pago_checkout">Método de pago</string>
    <string name="text_resumen_checkout">Resumen</string>
    <string name="text_subtotal_checkout">Sub Total</string>
    <string name="text_descuento_checkout">Descuento</string>
    <string name="text_delivery_checkout">Delivery</string>
    <string name="text_total__checkout">Total</string>
    <string name="text_guardar_checkout">Guardar</string>
    <string name="button_realizar_pedido_checkout">Realizar pedido</string>
</resources>
